--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chapter-10",
+  "name": "flixtube",
   "version": "1.0.0",
   "description": "Code and examples for Chapter 10 of Bootstrapping Microservices.",
   "scripts": {
